--- a/home.html
+++ b/home.html
@@ -7,5 +7,7 @@
     <p>This Is My New Website. Hope You Like It</p>
 
 <body>
-
+    <h1>Weather Report</h1>
+    <p>Special Weather Report for Customers of UnBeaten Path</p>
+    
 <html></html>
