--- a/home.html
+++ b/home.html
@@ -3,11 +3,10 @@
     <title>Welcome to My Website</title>
 <head>
 <body>
-    <h1>WELCOME</h1>
-    <p>This Is My New Website. Hope You Like It</p>
+    <h1>WELCOME TO UnBeaten Path</h1>
+    <p>This Is UnBeaten Path</p>
 
 <body>
-    <h1>Weather Report</h1>
-    <p>Special Weather Report for Customers of UnBeaten Path</p>
     
 <html></html>
+<img src="file:///C:/Users/Cottrell/Pictures/Extra/Maine%20Woods.jpg" width="1024" height="681" alt="Photo of Woods in Maine" />
