--- a/home.html
+++ b/home.html
@@ -3,9 +3,18 @@
     <title>Welcome to My Website</title>
 <head>
 <body>
+    
     <h1>WELCOME TO UnBeaten Path</h1>
     <p>This Is UnBeaten Path</p>
+    <h2>Weather</h2>
+    <p>The Weather Will Tell You What The Weather Is For The Next Week & Month</p>
+ <img src="file:///C:/Users/Cottrell/Pictures/Extra/Maine%20Woods.jpg" width="1024" height="681" alt="Photo of Woods in Maine" />
 
 <body>
-    
+    <body style="background-color:#44d01c;"></body>
+
+<body>
+    <p style="color:white;"></p>
+</body>
+
 <html></html>
