--- a/aboutpage.html
+++ b/aboutpage.html
@@ -3,7 +3,8 @@
     <head>
         <title>About</title>
     </head>
-...
+    <a href="file:///C:/Users/Cottrell/Documents/My%20Code/UnBeatenPathWebsite/Home/home.html">HP (Home Page)</a>
+    
 </html>
 <html>
     <head>
