--- a/informationpage.html
+++ b/informationpage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Contact</title>
+        <title>Information</title>
     </head>
     <a href="file:///C:/Users/Cottrell/Documents/My%20Code/UnBeatenPathWebsite/Home/home.html">HP (Home Page)</a>
+    
 </html>
 <html>
     <head>
@@ -14,10 +15,10 @@
         </style>
         </head>
         <body>
-  <h1>Contacts</h1>  
-  <p>Contacts Conected To UnBeaten Path</p>
-  <div>Contact Us & We'll Do Our Best To Get Back To You</div>    
+  <h1>UnBeaten Path's Information Page</h1>  
+  <p>Read On To Learn</p>
+  <div>We Have One Big Box of Information For You To Read On Leasure Time</div>    
     
 </body>
 </html> 
-<body style="background-color:#ffffff;"></body>
+<body style="background-color:#ff0000;"></body>
