--- a/surveypage.html
+++ b/surveypage.html
@@ -3,7 +3,7 @@
     <head>
         <title>Survey</title>
     </head>
-
+    <a href="file:///C:/Users/Cottrell/Documents/My%20Code/UnBeatenPathWebsite/Home/home.html">HP (Home Page)</a>
 </html>
 <html>
     <head>
