--- a/weatherpage.html
+++ b/weatherpage.html
@@ -3,7 +3,7 @@
     <head>
         <title>Weather</title>
     </head>
-
+    <a href="file:///C:/Users/Cottrell/Documents/My%20Code/UnBeatenPathWebsite/Home/home.html">HP (Home Page)</a>
 </html>
 <html>
     <head>
@@ -19,5 +19,39 @@
   <div>We Have The Updated Everyday</div>    
     
 </body>
-</html> 
-<body style="background-color:#b4ff05;"></body>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.alert {
+  padding: 20px;
+  background-color: #44d01c;
+  color: black;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: black;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: blue;
+}
+</style>
+</head>
+<body>
+
+<div class="alert">
+  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+  <strong>Danger For 12:15!</strong> Weather Indicates A Dangerous Thunder Storm Coming
+
+
+</body>
+</html>
+<body style="background-color:rgb(229, 255, 0)"></body>
