--- a/accountpage.html
+++ b/accountpage.html
@@ -3,7 +3,7 @@
     <head>
         <title>Accounts</title>
     </head>
-
+    <a href="file:///C:/Users/Cottrell/Documents/My%20Code/UnBeatenPathWebsite/Home/home.html">HP (Home Page)</a>
 </html>
 <html>
     <head>
@@ -19,3 +19,57 @@
 </body>
 </html> 
 <body style="background-color:#008026;"></body>
+<head>
+    <style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    </style>
+    </head>
+    <body>
+<h1>
+<!-- Button to open the modal login form -->
+ <button onclick="document.getElementById('id01').style.display='block'">Login</button>
+
+ <!-- The Modal -->
+ <div id="id01" class="modal">
+   <span onclick="document.getElementById('id01').style.display='none'"
+ class="close" title="Close Modal">&times;</span>
+ 
+   <!-- Modal Content -->
+   <form class="modal-content animate" action="/action_page.php">
+     <div class="imgcontainer">
+       <img src="img_avatar2.png" alt="Avatar" class="avatar">
+     </div>
+ 
+     <div class="container">
+       <label for="uname"><b>Username</b></label>
+       <input type="text" placeholder="Enter Username" name="uname" required>
+ 
+       <label for="psw"><b>Password</b></label>
+       <input type="password" placeholder="Enter Password" name="psw" required>
+ 
+       <button type="submit">Login</button>
+       <label>
+         <input type="checkbox" checked="checked" name="remember"> Remember me
+       </label>
+     </div>
+ 
+     <div class="container" style="background-color:#f1f1f1">
+       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+       <span class="psw">Forgot <a href="#">password?</a></span>
+     </div>
+   </form>
+ </div>  
+<!-- Button to open the modal -->
+ <button onclick="document.getElementById('id01').style.display='block'">Sign Up</button>
+
+ <!-- The Modal (contains the Sign Up form) -->
+ <div id="id01" class="modal">
+       <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+       </div>
+     </div>
+   </form>
+ </div>
+</h1>
